[bumpversion]
current_version = 0.0.0
tag = True
commit = True

[bumpversion:file:kismet/__init__.py]

[bumpversion:file:version.txt]

[aliases]
test = pytest

[tool:pytest]
addopts = -v -x
python_files = tests/test*.py

[metadata]
name = jupyter-exec
version = file: version.txt
author = Mara Kim
author_email = mara@autochthe.net
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
license = NA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/autochthe/jupyter-exec

[options]
packages = find:
include_package_data = True
python_requires = >=3.6,<3.7
install_requires = 
    jupyter
setup_requires = 
	setuptools>=39.0
	pytest-runner>=2.0
tests_require = 
	pytest

